--- a/.classpath
+++ b/.classpath
@@ -18,5 +18,15 @@
 	<classpathentry kind="lib" path="C:/Users/NONGCEBO/eclipse-workspace-1/JARs/protobuf-java-3.11.4.jar"/>
 	<classpathentry kind="lib" path="C:/Users/NONGCEBO/eclipse-workspace-1/jstl-1.2.jar"/>
 	<classpathentry kind="lib" path="C:/Users/NONGCEBO/eclipse-workspace-1/mysql-connector-j-8.0.31.jar"/>
+	<classpathentry kind="lib" path="C:/Users/NONGCEBO/.m2/repository/org/springframework/spring-context/5.3.5/spring-context-5.3.5.jar" sourcepath="C:/Users/NONGCEBO/.m2/repository/org/springframework/spring-context/5.3.5/spring-context-5.3.5-sources.jar">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+			<attribute name="org.eclipse.jst.component.archivename" value="spring-context-5.3.5.jar"/>
+			<attribute name="maven.groupId" value="org.springframework"/>
+			<attribute name="maven.artifactId" value="spring-context"/>
+			<attribute name="maven.version" value="5.3.5"/>
+			<attribute name="maven.scope" value="compile"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
